2004-04-10  Callum McKenzie  <callum@physics.otago.ac.nz>

	* press_data.c: 
	* slot.c: 
	* slot.h:	
	* draw.c: Add a "pixelx" and "pixely" coordinate to the slot
	structure so that we can cache the real locations. This also
	allows all the clicking and dragging code to work with minimal
	modification. This is step 3 of the scaling code.

2004-04-08  Callum McKenzie  <callum@physics.otago.ac.nz>

	* draw.c: Fix the card locations up. Stage 2 is now complete.

2004-04-06  Callum McKenzie  <callum@physics.otago.ac.nz>

	* sol.scm: 
	* cscmi.c: 
	* card.c:
	* card.h:
        * draw.c:
	* draw.h:
	* event.c: Step 2: Position the cards correctly (but with the wrong
	sizes). This involves a major reshuffling of geometry code. The 
	scheme position data is now in slots rather than pixels. The geometry 
	code has been dragged back into draw.c rather than card.c. Unused
	stuff has been dropped from cscmi.c.

	
	* aisleriot.schemas.in: 
	* sol.c:
	* events.c:
	* draw.c:
	* draw.h: Aisleriot scaling support step 1: Remember the size of
	the main window and don't change it with the game.

2004-03-31  Callum McKenzie  <callum@physics.otago.ac.nz>

	* royal_east.scm (button-double-clicked): Reworked Paolo's patch
	to remove the cut-and-paste "loop" and replace it with a recursive
	function.

2004-03-30  Paolo Borelli  <pborelli@katamail.com>

	* royal_east.scm: Implement double-clicking logic.

2004-03-19  Callum McKenzie  <callum@physics.otago.ac.nz>

	* sol.c:
	* menu.c: 
	* help/C/*.xml: (Re)implement a game-specific help menu item.

2004-03-15  Callum McKenzie  <callum@physics.otago.ac.nz>

	* sol.c: 
	* sol.h:
	* press_data.h:	
	* press_data.c: Rationalise all the press_data functions into
	press_data.c. Move the definition of press_data to press_data.h.
	events.c still does evil things to press_data though.

2004-02-24  Callum McKenzie  <callum@physics.otago.ac.nz>

	* statistics.glade: Mark the "do not translate this" messages as
	non-translatable.
