@@ -1,5 +1,13 @@
 2004-04-10  Callum McKenzie  <callum@physics.otago.ac.nz>
 
+	* zebra.scm:
+	* draw.c:
+	* draw.h:
+	* sol.c:	
+	* cscmi.c: Make the slot co-ordinates real values. Test this on
+	zebra.scm. This allows both the slot positions and the board size
+	to be real values.
+	
 	* press_data.c: 
 	* slot.c: 
 	* slot.h:	
